<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/CiphererFragment"
    tools:context=".fragments.CiphererFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/cipher_mode_switcher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/ciphering_mode"
                        android:textFontWeight="600"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:checked="false"
                        tools:ignore="UseSwitchCompatOrMaterialXml"
                        tools:targetApi="p" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/upTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_border_selector"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/hint_forCiphering"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:padding="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="11"
                android:orientation="vertical">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/mainComponent_color" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat"
                                android:text="@string/text_alphabet"
                                android:textFontWeight="700"
                                tools:targetApi="p" />

                            <ListView
                                android:id="@+id/listViewAlphabets"
                                android:layout_width="150dp"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="10dp"
                                android:background="@drawable/listview_selector_border"
                                android:choiceMode="singleChoice"
                                android:overScrollMode="ifContentScrolls" />

                        </LinearLayout>

                        <ImageButton
                            android:id="@+id/btnEncrypt"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="10dp"
                            android:backgroundTint="@color/mainComponent_color"
                            android:contentDescription="@string/button_description"
                            android:src="@mipmap/ic_encrypt_icon" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat"
                                android:text="@string/text_key"
                                android:textFontWeight="700"
                                tools:targetApi="p" />

                            <Spinner
                                android:id="@+id/spinnerKeyField"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="10dp"
                                android:background="@drawable/listview_selector_border"
                                android:hint="@string/keyField_hint"
                                android:inputType="text"
                                android:minHeight="20dp"
                                android:spinnerMode="dropdown" />
                        </LinearLayout>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/mainComponent_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/downTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_border_selector"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/hint_cipheredText"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:padding="8dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/shutter_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shutter_container_background"
                android:orientation="vertical">

                <View
                    android:id="@+id/shutter_view_line"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/shutter_background" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnShowEncryptingHistory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/montserrat"
                        android:singleLine="true"
                        android:text="@string/text_cipherer_usingHistory"
                        android:textFontWeight="400"
                        tools:targetApi="p" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/historyLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewHistory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/listview_selector_border"
                        tools:itemCount="3" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
